--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #8d8f91;
+  border: 1px solid rgba(100, 100, 100, 0.2);
   box-sizing: border-box;
   border-radius: 50px;
   padding: 5px;
@@ -143,7 +143,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #8d8f91;
+  border: 1px solid rgba(100, 100, 100, 0.2);
   box-sizing: border-box;
   border-radius: 50px;
   padding: 5px;
@@ -172,7 +172,7 @@ img {
 }
 .box main .senha {
   margin-bottom: 20px;
-  border: 1px solid #8d8f91;
+  border: 1px solid rgba(100, 100, 100, 0.2);
   box-sizing: border-box;
   border-radius: 5px;
   height: 50px;
@@ -188,7 +188,7 @@ img {
 }
 .box main .botton {
   margin-top: 20px;
-  border: 1px solid #8d8f91;
+  border: 1px solid rgba(100, 100, 100, 0.2);
   box-sizing: border-box;
   border-radius: 50px;
   padding: 8px;
