--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,6 @@ a {
   text-decoration: none;
 }
 
-img {
-  display: block;
-  width: 100%;
-  border-radius: 5px;
-}
-
 .estrutura {
   height: 100vh;
   background: rgba(0, 0, 0, 0.4);
@@ -193,4 +187,114 @@ img {
   border-radius: 50px;
   padding: 8px;
   background: white;
+}
+
+/*    style-home    */
+
+.home-structure {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+.home-img {
+  width: 50%;
+  height: 700px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../img/fotohometwitter.png);
+}
+.home-main {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  height: 700px;
+  margin: 35px 0 0 35px;
+}
+
+.home-main img {
+  width: 40px;
+}
+.home-main h1 {
+  margin-top: 32px;
+  font-size: 64px;
+}
+.home-main h2 {
+  font-size: 32px;
+}
+.home-main .home-google {
+  width: 50%;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid rgba(100, 100, 100, 0.2);
+  box-sizing: border-box;
+  border-radius: 50px;
+  padding: 5px;
+  background: white;
+}
+.home-main .home-google img {
+  width: 25px;
+  margin-right: 5px;
+}
+.home-main .home-facebook {
+  width: 50%;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid rgba(100, 100, 100, 0.2);
+  box-sizing: border-box;
+  border-radius: 50px;
+  padding: 5px;
+  background: white;
+}
+.home-main .home-facebook img {
+  width: 25px;
+  margin-right: 5px;
+}
+
+.home-main .home-separaçao {
+  display: flex;
+  width: 50%;
+  justify-content: flex-start;
+  margin-bottom: 20px;
+}
+.home-main .home-separaçao .leftline {
+  height: 50%;
+  margin-right: 8px;
+  width: 50%;
+  border-bottom: 1px solid rgba(100, 100, 100, 0.2);
+}
+.home-main .home-separaçao .rightline {
+  height: 50%;
+  width: 50%;
+  margin-left: 8px;
+  border-bottom: 1px solid rgba(100, 100, 100, 0.2);
+}
+.home-main .advance {
+  width: 50%;
+  margin-top: 10px;
+  border: 1px solid rgba(100, 100, 100, 0.2);
+  box-sizing: border-box;
+  border-radius: 50px;
+  padding: 8px;
+  background: #1c9bf0;
+  color: white;
+}
+.home-main h3 {
+  width: 50%;
+  font-size: 10px;
+  color: #8d8f91;
+}
+
+.home-main .login {
+  width: 50%;
+  margin-top: 10px;
+  border: 1px solid rgba(100, 100, 100, 0.2);
+  box-sizing: border-box;
+  border-radius: 50px;
+  padding: 8px;
+  background: white;
+  color: #1c9bf0;
 }
