--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,9 @@ a {
   box-sizing: border-box;
   border-radius: 50px;
 }
+.box header .closebuttom a {
+  padding: 5px 0 5px 5px;
+}
 .box header .closebuttom:hover {
   cursor: pointer;
   background: #c8c9ca;
@@ -197,15 +200,15 @@ a {
 .home-structure {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 99vh;
 }
 .home-img {
   display: flex;
   align-content: center;
   justify-content: center;
   width: 55%;
-  height: 99vh;
-  background-size: cover;
+  height: 100%;
+  background-size: 100% 100%;
   background-repeat: no-repeat;
   background-image: url(https://abs.twimg.com/sticky/illustrations/lohp_850x623.png);
 }
@@ -216,7 +219,7 @@ a {
   display: flex;
   flex-direction: column;
   width: 45%;
-  height: 99vh;
+  height: 100%;
   margin: 0 0 0 35px;
 }
 
@@ -305,6 +308,7 @@ a {
 }
 
 .home-main .login {
+  padding: 0 15px 0 15px;
   margin-top: 10px;
   width: 50%;
   border: 1px solid rgba(100, 100, 100, 0.2);
@@ -313,4 +317,37 @@ a {
   padding: 8px;
   background: white;
   color: #1c9bf0;
+}
+.home-main .login a {
+  text-decoration: none;
+  padding: 15px 60px 15px 60px;
+}
+@media (max-width: 1000px) {
+  .home-structure {
+    display: flex;
+    flex-direction: column-reverse;
+    height: 100%;
+  }
+  .home-img {
+    width: 100%;
+    height: 50%;
+  }
+  .home-main {
+    margin: 0 0 0 0;
+    padding-left: 35px;
+    width: 90%;
+    height: 50%;
+    overflow-y: hidden;
+    margin-bottom: 55px;
+  }
+}
+@media (max-width: 510px) {
+  .home-main h1 {
+    margin-top: 32px;
+    font-size: 40px;
+  }
+  .home-main h2 {
+    margin-top: 32px;
+    font-size: 23px;
+  }
 }
